--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
   <nav>
     <ul>
-      <li><a href="./">Home</a></li>
-      <li><a href="./#aboutUs">About us</a></li>
-      <li><a href="./#gallery">Gallery</a></li>
-      <li><a href="./#contact">Contact</a></li>
+      <li><a onclick="window.location.assign('#')">Home</a></li>
+      <li><a onclick="window.location.assign('#aboutUs')">About us</a></li>
+      <li><a onclick="window.location.assign('#gallery')">Gallery</a></li>
+      <li><a onclick="window.location.assign('#contact')">Contact</a></li>
 
     </ul>
   </nav>
