--- a/index.html
+++ b/index.html
@@ -90,13 +90,7 @@
     // generateRandomItems()
 
     setInterval(() => managerVars(), 500);
-    setInterval(() => generateRandomItems(), 3000)
-
-    // document.addEventListener('click', function() {
-    //   var audio = new Audio('./vid/bg.mp3');
-    //   audio.volume = 0.1;
-    //   audio.play();
-    // });
+    // setInterval(() => generateRandomItems(), 3000)
   </script>
 
   <div class="preloader" id="preloader">
@@ -234,7 +228,7 @@
   <footer>
 
 
-    <p>All rights reserved. Copyright &#169; 2024 Zoro Studios by Cloudycoding | Website v0.3</p>
+    <p>All rights reserved. Copyright &#169; 2024 Zoro Studios by Cloudycoding | Website v0.4</p>
 
   </footer>
 
