--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/shaderEffect.css">
+  <link rel="stylesheet" href="./css/mobile.css">
 
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -228,7 +229,7 @@
   <footer>
 
 
-    <p>All rights reserved. Copyright &#169; 2024 Zoro Studios by Cloudycoding | Website v0.4</p>
+    <p>All rights reserved. Copyright &#169; 2024 Zoro Studios by Cloudycoding | Website v0.5</p>
 
   </footer>
 
