just added the preloader

--- a/index.html
+++ b/index.html
@@ -290,28 +290,28 @@
 
     }
 
-    // loadComponents([
-    //   `<div class="zoro preloaderItem">
-    //     <img src="./img/logo.png" alt="logo">
-    //     <div class="textContent">
-    //       <h1>Zoro</h1>
-    //       <p>Studios</p>
-    //     </div>
-    //   </div>`,
-    //   `<div class="preloaderItem">
-    //     <p>Obra original escrita por</p>
-    //     <h1>Sofia Maciel Cervantes</h1>
-    //   </div>`,
-    //   `<div class="preloaderItem">
-    //     <p>Programada y adaptada por</p>
-    //     <h1>Eduardo Emanuel Guzman</h1>
-    //   </div>`
-    // ])
+    loadComponents([
+      `<div class="zoro preloaderItem">
+        <img src="./img/logo.png" alt="logo">
+        <div class="textContent">
+          <h1>Zoro</h1>
+          <p>Studios</p>
+        </div>
+      </div>`,
+      `<div class="preloaderItem">
+        <p>Obra original escrita por</p>
+        <h1>Sofia Maciel Cervantes</h1>
+      </div>`,
+      `<div class="preloaderItem">
+        <p>Programada y adaptada por</p>
+        <h1>Eduardo Emanuel Guzman</h1>
+      </div>`
+    ])
 
 
 
 
-    loadComponents([])
+    // loadComponents([])
   </script>
 </body>
 
