--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       </div>`,
       `<div class="preloaderItem">
         <p>Obra original escrita por</p>
-        <h1>Sofia Maciel Cervantes</h1>
+        <h1>WindPrintss</h1>
       </div>`,
       `<div class="preloaderItem">
         <p>Programada y adaptada por</p>
